# Flick

./: .gitignore  FlickHandler  README.md  app.fk  console.py  flick.icns  generate.bat  host.py  mac_app.sh  main.py  no_example.py  pyproject.toml
Flick.app/Contents/MacOS/: Flick  app.fk  main.py
templates/: about.html
tests/: cp_variable_metadata.py  win_variable_metadatatest.bat
