[tool.poetry]
name = "repl_python3_Flick-1"
version = "0.1.0"
description = ""
authors = ["JosiahAwsome <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
yachalk = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
